# psp

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  input.c  main.c  player.c  player.h  psp  render.c  render.h  test.c
include/: enviorment.h  player.h  render.h
include/common/: input.h
src/: CMakeLists.txt  enviorment.c  input.c  main.c  player.c  render.c
src/common/: input.c  render.c
